crates/core/src/engine/snapshots/teitunnel_core__engine__planner_tests__conflicting_a_record_requires_confirmation.snap
---
source: crates/core/src/engine/planner_tests.rs
expression: snap(&p)
---
steps:
  - type: putConfig
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    ingress:
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - hostname: www.xyz.com
        service: "http://localhost:3001"
      - service: "http_status:404"
    expectedVersion: 3
    previous:
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - service: "http_status:404"
  - type: updateRecord
    zoneId: z-xyz
    recordId: r-www-a
    hostname: www.xyz.com
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    routeId: r5
    previous:
      id: r-www-a
      name: www.xyz.com
      type: A
      content: 203.0.113.4
      proxied: false
      comment: ~
      ttl: 1
  - type: deleteRecord
    zoneId: z-xyz
    record:
      id: r-www-aaaa
      name: www.xyz.com
      type: AAAA
      content: "2001:db8::4"
      proxied: false
      comment: ~
      ttl: 1
  - type: verify
    hostname: www.xyz.com
warnings:
  - type: replacesForeignRecord
    hostname: www.xyz.com
    kind: A
    content: 203.0.113.4
  - type: replacesForeignRecord
    hostname: www.xyz.com
    kind: AAAA
    content: "2001:db8::4"
requiresConfirmation: true
fingerprint: "<fingerprint>"
tunnelName: "Krishna's MacBook Pro"
