crates/core/src/engine/snapshots/teitunnel_core__engine__planner_tests__first_route_on_a_fresh_account.snap
---
source: crates/core/src/engine/planner_tests.rs
expression: snap(&p)
---
steps:
  - type: createTunnel
    name: "Krishna's MacBook Pro"
  - type: putConfig
    tunnel:
      kind: created
    ingress:
      - hostname: xyz.com
        service: "http://localhost:3000"
      - service: "http_status:404"
    expectedVersion: ~
    previous: []
  - type: createRecord
    zoneId: z-xyz
    hostname: xyz.com
    tunnel:
      kind: created
    routeId: r1
  - type: verify
    hostname: xyz.com
warnings: []
requiresConfirmation: false
fingerprint: "<fingerprint>"
