crates/core/src/engine/snapshots/teitunnel_core__engine__planner_tests__remove_last_route_deletes_owned_dns_and_warns_tunnel_empty.snap
---
source: crates/core/src/engine/planner_tests.rs
expression: snap(&p)
---
steps:
  - type: putConfig
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    ingress:
      - service: "http_status:404"
    expectedVersion: 3
    previous:
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - service: "http_status:404"
  - type: deleteRecord
    zoneId: z-xyz
    record:
      id: r-app
      name: app.xyz.com
      type: CNAME
      content: 6ff42ae2-765d-4adf-8112-31c55c1551ef.cfargotunnel.com
      proxied: true
      comment: ~
      ttl: 1
warnings:
  - type: tunnelEmpty
requiresConfirmation: false
fingerprint: "<fingerprint>"
