crates/core/src/engine/snapshots/teitunnel_core__engine__planner_tests__remove_path_route_keeps_the_hostname.snap
---
source: crates/core/src/engine/planner_tests.rs
expression: snap(&p)
---
steps:
  - type: putConfig
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    ingress:
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - hostname: yx.com
        service: "http://localhost:5000"
      - service: "http_status:404"
    expectedVersion: 3
    previous:
      - hostname: app.xyz.com
        path: ^/api/
        service: "http://localhost:8080"
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - hostname: yx.com
        service: "http://localhost:5000"
      - service: "http_status:404"
warnings: []
requiresConfirmation: false
fingerprint: "<fingerprint>"
tunnelName: "Krishna's MacBook Pro"
