crates/core/src/engine/snapshots/teitunnel_core__engine__planner_tests__remove_tunnel_cascades.snap
---
source: crates/core/src/engine/planner_tests.rs
expression: snap(&p)
---
steps:
  - type: putConfig
    tunnel:
      kind: existing
      id: 6ff42ae2-765d-4adf-8112-31c55c1551ef
    ingress:
      - service: "http_status:404"
    expectedVersion: 3
    previous:
      - hostname: app.xyz.com
        service: "http://localhost:3000"
      - hostname: yx.com
        service: "http://localhost:5000"
      - service: "http_status:404"
  - type: deleteRecord
    zoneId: z-xyz
    record:
      id: r-app
      name: app.xyz.com
      type: CNAME
      content: 6ff42ae2-765d-4adf-8112-31c55c1551ef.cfargotunnel.com
      proxied: true
      comment: ~
  - type: deleteRecord
    zoneId: z-yx
    record:
      id: r-yx
      name: yx.com
      type: CNAME
      content: 6ff42ae2-765d-4adf-8112-31c55c1551ef.cfargotunnel.com
      proxied: true
      comment: ~
  - type: stopConnector
    tunnelId: 6ff42ae2-765d-4adf-8112-31c55c1551ef
  - type: deleteTunnel
    tunnelId: 6ff42ae2-765d-4adf-8112-31c55c1551ef
warnings: []
requiresConfirmation: false
fingerprint: "<fingerprint>"
