crates/core/src/engine/snapshots/teitunnel_core__engine__planner_tests__remove_tunnel_without_routes.snap
---
source: crates/core/src/engine/planner_tests.rs
expression: snap(&p)
---
steps:
  - type: stopConnector
    tunnelId: 6ff42ae2-765d-4adf-8112-31c55c1551ef
  - type: deleteTunnel
    tunnelId: 6ff42ae2-765d-4adf-8112-31c55c1551ef
warnings: []
requiresConfirmation: false
fingerprint: "<fingerprint>"
tunnelName: "Krishna's MacBook Pro"
